Bug 544224 - [12] Switch Expression - Unexpected compiler error for parenthesized expression